--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     margin: 0;
     top:50%;
     left:50%;
-    margin-right: -50%;
+    /* margin-right: -50%; */
     transform: translate(-50%, -50%);
     border:10px solid white;
     border-radius: 50px;
@@ -29,13 +29,13 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 }
 .image{
-  background: url(./design/nocolas.jpeg);
-  display:block;
+    background: url(./design/nocolas.jpeg);
+    display:block;
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    background-position: center;
-    background-size:contain;
+    background-position:center;
+    background-size:cover;
     background-repeat: no-repeat;
     padding: 50px;
     
@@ -57,11 +57,15 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .nav ul{
     text-align: center;
+    position:sticky;
+    
+
 }
 .nav{
     background-color: rgb(228, 225, 225);
     padding: 10px;
     width: 100%;
+    
 }
 .nav a{
     text-decoration: none;
@@ -72,6 +76,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     width: 100%;
     color:red;
     background-color: rgb(241, 236, 236);
+    text-decoration: underline;
 }
 .text h2{
     text-align: center;
@@ -92,7 +97,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     height:250px;
     object-fit: cover;
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     padding: 50px;
     margin-left:100px;
@@ -157,6 +162,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         width: 100%;
         height: 100px;
     }
+    .h1-bottom{
+        text-align: center;
+    }
 }
 @media(min-width:992px){
     body{
@@ -168,7 +176,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         position:absolute;
         top:180px;
         left: 50px;
-        z-index: 10;
+       
     }
 
 }
